package br.ufscar.dc.pooa.Model.interfaces;

public interface ReservationState {
    ReservationState getReservation();
    ReservationState updateReservation();
}
